2011-02-14 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* gmp-impl.h (mpn_sublsh_n): Declare.
	* mpn/asm-defs.m4: Likewise.

2011-02-13  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/atom/aorrlsh2_n.asm: New file.

2011-02-12  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/aorrlsh_n.asm: Minor tweaks, update c/l numbers.

	* mpn/x86_64/atom/sublsh1_n.asm: New file.

	* mpn/x86_64/atom/aorrlsh1_n.asm: New file.

2011-02-11  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/mode64/mod_1_1.asm: Fix Darwin syntax issues.

2011-02-10  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc64/mode64/mod_1_4.asm: Tune away a cycle for 970.

2011-02-11 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/k7/addlsh1_n.asm: Faster core loop (Torbjorn's).

	* configure.in: Add HAVE_NATIVE_{add,sub,rsb}lsh{,1,2}_nc.
	* tests/tests.h: refmpn_{add,sub,rsb}lsh{,1,2}_nc prototypes.
	* tests/refmpn.c: New refmpn_{add,sub,rsb}lsh{,1,2}_nc.
	* tests/devel/try.c: Tests for mpn_{add,sub,rsb}lsh{,1,2}_nc.

	* mpn/x86/k7/aorrlshC_n.asm: New file.
	* mpn/x86/atom/aorrlsh2_n.asm: Grab k7/aorrlshC_n.asm.
	* mpn/x86/atom/rsblsh1_n.asm: Grab k7/aorrlshC_n.asm.

2011-02-06 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/k7/addlsh1_n.asm: New file.
	* mpn/x86/k7/sublsh1_n.asm: New file.
	* mpn/x86/atom/addlsh1_n.asm: Grab k7/addlsh1_n.asm.
	* mpn/x86/atom/sublsh1_n.asm: Grab k7/sublsh1_n.asm.

2011-02-05  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (mpn_addlsh1_nc, mpn_addlsh2_nc, mpn_sublsh1_nc,
	mpn_sublsh2_nc, mpn_rsblsh1_nc, mpn_rsblsh2_nc): Declare.
	* mpn/asm-defs.m4: Likewise.

	* mpn/x86_64/coreisbr/aorrlshC_n.asm: New file.
	* mpn/x86_64/coreisbr/aorrlsh1_n.asm: New file.
	* mpn/x86_64/coreisbr/aorrlsh2_n.asm: New file.

	* mpn/x86_64/coreisbr/aors_n.asm: New file, based on old
	atom/aors_n.asm.
	* mpn/x86_64/atom/aors_n.asm: Grab coreisbr/aors_n.asm.

2011-02-05 Marco Bodrato <bodrato@mail.dm.unipi.it>
